--- a/packages/theme-gondor/src/button.scss
+++ b/packages/theme-gondor/src/button.scss
@@ -49,7 +49,7 @@
     border: 0;
   }
 
-  & [class*='el-icon-'] {
+  & [class*='me-icon-'] {
     & + span {
       margin-left: 5px;
     }
@@ -87,7 +87,7 @@
       border-color: $--button-disabled-border-color;
     }
 
-    &.el-button--text {
+    &.me-button--text {
       background-color: transparent;
     }
 
@@ -226,10 +226,10 @@
   display: inline-block;
   vertical-align: middle;
 
-  & > .el-button {
+  & > .me-button {
     float: left;
     position: relative;
-    & + .el-button {
+    & + .me-button {
       margin-left: 0;
     }
     &.is-disabled {
@@ -275,8 +275,8 @@
     }
   }
 
-  & > .el-dropdown {
-    & > .el-button {
+  & > .me-dropdown {
+    & > .me-button {
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
       border-left-color: rgba($--color-white, 0.5);
@@ -284,7 +284,7 @@
   }
 
   @each $type in (primary, success, warning, danger, info) {
-    .el-button--#{$type} {
+    .me-button--#{$type} {
       &:first-child {
         border-right-color: rgba($--color-white, 0.5);
       }
