--- a/examples/demo-styles/button.scss
+++ b/examples/demo-styles/button.scss
@@ -1,20 +1,20 @@
 .demo-block.demo-button {
-  .el-row {
+  .me-row {
     margin-bottom: 20px;
 
     &:last-child {
       margin-bottom: 0;
     }
   }
-  .el-button + .el-button {
+  .me-button + .me-button {
     margin-left: 10px;
   }
-  .el-button-group {
-    .el-button + .el-button {
+  .me-button-group {
+    .me-button + .me-button {
       margin-left: 0;
     }
 
-    & + .el-button-group {
+    & + .me-button-group {
       margin-left: 10px;
     }
   }
