--- a/examples/demo-styles/layout.scss
+++ b/examples/demo-styles/layout.scss
@@ -1,11 +1,4 @@
-:::demo 通过 row 和 col 组件，并通过 col 组件的 `span` 属性我们就可以自由地组合布局。
-
-```html
-<me-row>
-  <me-col :span="24"><div class="grid-content bg-purple-dark"></div></me-col>
-</me-row>
-
-<style>
+.demo-layout {
   .me-row {
     margin-bottom: 20px;
     &:last-child {
@@ -32,7 +25,4 @@
     padding: 10px 0;
     background-color: #f9fafc;
   }
-</style>
-```
-
-:::
+}
