--- a/packages/theme-gondor/src/index.scss
+++ b/packages/theme-gondor/src/index.scss
@@ -1,7 +1,9 @@
-@import "./base.scss";
-@import "./test.scss";
-@import "./button.scss";
-@import "./tooltip.scss";
-@import "./button-group.scss";
-@import "./row.scss";
-@import "./col.scss";
+@import './base.scss';
+@import './test.scss';
+@import './button.scss';
+@import './tooltip.scss';
+@import './button-group.scss';
+@import './row.scss';
+@import './col.scss';
+@import './backtop.scss';
+@import './scrollbar.scss';
